Add domain in letters

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ a:hover {
 }
 </style>
   <body style="">
+      <h1>robots-from-jupyter.github.io</h1>
       <h1><a href="RobotLab-Workshop_2019-01-16.pdf">Workshop 16.1.</a></h1>
       <h2><a href="https://github.com/robots-from-jupyter/robotlab/releases
 ">RobotLab installer</a></h1>
