--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@ a:hover {
 </style>
   <body style="">
       <h1>robots-from-jupyter.github.io</h1>
-      <h1><a href="RobotLab-Workshop_2019-01-16.pdf">Workshop 16.1.</a></h1>
+      <h1><a href="RobotLab-Workshop_2019-01-16.pdf">Workshop 16.1.2019</a></h1>
       <h2><a href="https://github.com/robots-from-jupyter/robotlab/releases
 ">RobotLab installer</a></h1>
       <h2><a href="https://github.com/robots-from-jupyter/robotkernel/archive/master.zip">RobotKernel notebooks</a></h1>
+      <h2><a href="RoboCon-Presentation_2019-01-17.pdf">Presentation 17.1.2019</a></h1>
   </body>
 </html>
