--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>robots-from-jupyter</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
   </head>
 <style>
 body {
