--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>robots-from-jupyter</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-  </head>
-<style>
+  <style>
 body {
     position: absolute;
     top: 0;
@@ -20,7 +19,7 @@ body {
 
     background: #f46524;
     color: white;
-    font-family: sans-serif;
+    font-family: "Lato", sans-serif;
 }
 a {
     color: white;
@@ -29,7 +28,8 @@ a:hover {
     color: white;
     text-decoration: none;
 }
-</style>
+  </style>
+  </head>
   <body style="">
       <h1>robots-from-jupyter.github.io</h1>
       <h1><a href="RobotLab-Workshop_2019-01-16.pdf">Workshop 16.1.2019</a></h1>
