--- a/index.html
+++ b/index.html
@@ -2,40 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>robots-from-jupyter</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-  <style>
-body {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-
-    background: #f46524;
-    color: white;
-    font-family: "Lato", sans-serif;
-}
-a {
-    color: white;
-}
-a:hover {
-    color: white;
-    text-decoration: none;
-}
-  </style>
+    <title>robots-from-jupyter.github.io</title>
+    <meta http-equiv="refresh" content="0;URL='/public/'" />
   </head>
-  <body style="">
-      <h1>robots-from-jupyter.github.io</h1>
-      <h1><a href="RobotLab-Workshop_2019-01-16.pdf">Workshop 16.1.2019</a></h1>
-      <h2><a href="https://github.com/robots-from-jupyter/robotlab/releases
-">RobotLab installer</a></h1>
-      <h2><a href="https://github.com/robots-from-jupyter/robotkernel/archive/master.zip">RobotKernel notebooks</a></h1>
-      <h1><a href="RoboCon-Presentation_2019-01-17.pdf">Presentation 17.1.2019</a></h1>
+  <body>
   </body>
 </html>
